[package]
name = "trusti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.5"
reqwest = { version = "0.11.7", features = ["blocking"] }
rand = "0.8.4"
sha1 = "0.6.0"
futures = "0.3.19"
urlencoding = "2.1.0"
byteorder = "1.4.3"
